[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/droid-sans/DroidSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://graphics/ZNAKI/PZ1.jpg" type="Texture" id=4]
[ext_resource path="res://Main.theme" type="Theme" id=5]
[ext_resource path="res://scripts/QuestionScreen.gd" type="Script" id=6]
[ext_resource path="res://sounds/tictac.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[node name="QuestionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -590.0
margin_top = -350.0
margin_right = 590.0
margin_bottom = 350.0
rect_min_size = Vector2( 1180, 700 )
size_flags_horizontal = 3
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
margin_right = 1180.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer"]
margin_right = 1180.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Questions" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_right = 1180.0
margin_bottom = 403.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Questions"]
margin_left = 772.0
margin_right = 1180.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_clip_content = true
size_flags_horizontal = 10
size_flags_vertical = 3

[node name="Label3" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Questions/HBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
rect_clip_content = true
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pozosta≈Çy czas:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Questions/HBoxContainer"]
margin_left = 204.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Questions/HBoxContainer"]
margin_left = 308.0
margin_right = 408.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
rect_clip_content = true
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "s."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionNumberLabel" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Questions"]
margin_top = 60.0
margin_right = 1180.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pytanie nr ..."
align = 1

[node name="QuestionText" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Questions"]
margin_top = 118.0
margin_right = 1180.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ".................................................................................."
autowrap = true
clip_text = true

[node name="QuestionImage" type="TextureRect" parent="Margin/HBoxContainer/VBoxContainer/Questions"]
margin_top = 203.0
margin_right = 1180.0
margin_bottom = 403.0
rect_min_size = Vector2( 150, 200 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Timer" type="Timer" parent="Margin/HBoxContainer/VBoxContainer/Questions"]

[node name="Answers" type="GridContainer" parent="Margin/HBoxContainer/VBoxContainer"]
margin_top = 453.0
margin_right = 1180.0
margin_bottom = 700.0
size_flags_horizontal = 7
size_flags_vertical = 11
custom_constants/vseparation = 10
custom_constants/hseparation = 5

[node name="AnswerButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
margin_right = 1180.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton/HBoxContainer"]
margin_right = 32.0
margin_bottom = 50.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "A)"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton/HBoxContainer"]
margin_left = 82.0
margin_right = 1180.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "................................................."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="AnswerButton2" type="Button" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
margin_top = 60.0
margin_right = 1180.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton2/HBoxContainer"]
margin_right = 33.0
margin_bottom = 50.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "B)"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton2/HBoxContainer"]
margin_left = 83.0
margin_right = 1180.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "................................................."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="AnswerButton3" type="Button" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
margin_top = 120.0
margin_right = 1180.0
margin_bottom = 170.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 3
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton3/HBoxContainer"]
margin_right = 32.0
margin_bottom = 50.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
text = "C)"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton3/HBoxContainer"]
margin_left = 82.0
margin_right = 1180.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "................................................."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="NextButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
margin_left = 490.0
margin_top = 180.0
margin_right = 690.0
margin_bottom = 230.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 6
size_flags_vertical = 5

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/NextButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.75684
margin_right = 4.75684
custom_fonts/font = SubResource( 6 )
text = "DALEJ"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="timeout" from="Margin/HBoxContainer/VBoxContainer/Questions/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton" to="." method="_on_AnswerButton_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton2" to="." method="_on_AnswerButton2_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton3" to="." method="_on_AnswerButton3_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/Answers/NextButton" to="." method="_on_NextButton_pressed"]
